syntax = "proto3";

package unk.test.t2.shared;

option java_multiple_files = true;
option java_package = "unk.test.t2.shared";
option java_outer_classname = "HelloWorldProto";

// The greeting service definition.
service MyService {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {
    }
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}
message HelloReply {
    string name = 1;
}
